11.DevOps(GitOps)/11.1.Jenkins/Manifest/docker-dind.yaml
# docker-dind.yaml
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   labels:
#     app: docker-dind
#   name: docker-dind-data
#   namespace: kube-ops
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: nfs-csi # local-path # 指定一个可用的 storageclass
#   resources:
#     requests:
#       storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-dind
  namespace: kube-ops
  labels:
    app: docker-dind
spec:
  selector:
    matchLabels:
      app: docker-dind
  template:
    metadata:
      labels:
        app: docker-dind
    spec:
      containers:
        - image: docker:dind
          name: docker-dind
          args:
            - --registry-mirror=https://ot2k4d59.mirror.aliyuncs.com/ # 指定一个镜像加速器地址
          volumeMounts:
            - name: docker-dind-data-vol # 持久化docker根目录
              mountPath: /var/lib/docker/
          ports:
            - name: daemon-port
              containerPort: 2375
          securityContext:
            privileged: true # 需要设置成特权模式
      volumes:
        - name: docker-dind-data-vol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: docker-dind
  namespace: kube-ops
  labels:
    app: docker-dind
spec:
  ports:
    - port: 2375
      targetPort: 2375
  selector:
    app: docker-dind
