11.DevOps(GitOps)/11.1.Jenkins/Manifest/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccount: jenkins
      containers:
        - name: jenkins
          # 使用国内的镜像URL
          # image: registry.cn-shenzhen.aliyuncs.com/dragonzw_k8s_images/jenkins:2.356 # jenkins/jenkins:2.356
          # image: registry.cn-shenzhen.aliyuncs.com/dragonzw_k8s_images/jenkins:2.414.3 # jenkins/jenkins:2.414.3
          # image: registry.cn-shenzhen.aliyuncs.com/dragonzw_k8s_images/jenkins:2.426.3 # jenkins/jenkins:2.426.3
          # image: registry.cn-shenzhen.aliyuncs.com/dragonzw_k8s_images/jenkins:2.452.4 # jenkins/jenkins:2.452.4
          image: registry.cn-shenzhen.aliyuncs.com/dragonzw_k8s_images/jenkins:2.462.3 # jenkins/jenkins:2.462.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
            - containerPort: 50000
              name: agent
              protocol: TCP
          resources: # Pod 进行资源限制
            limits:
              cpu: 2500m
              memory: 4096Mi
            requests:
              cpu: 1500m
              memory: 2048Mi
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: jenkinshome
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkinshome
          persistentVolumeClaim:
            claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: kube-ops
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      port: 8080
      targetPort: web
    - name: agent
      port: 50000
      targetPort: agent
---
# 使用了 APISIX Ingress Controller 也可以使用其他的 Ingress 控制器
# apiVersion: apisix.apache.org/v2beta2
# kind: ApisixRoute
# metadata:
#   name: jenkins
#   namespace: kube-ops
# spec:
#   http:
#     - name: main
#       match:
#         hosts:
#           - jenkins.k8s.local
#         paths:
#           - '/*'
#       backends:
#         - serviceName: jenkins
#           servicePort: 8080
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: jenkins
#   namespace: kube-ops
# spec:
#   rules:
#   - host: jenkins.k8s.local
#     http:
#       paths:
#       - backend:
#           serviceName: jenkins
#           servicePort: web
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: jenkins
#   namespace: kube-ops
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`jenkins.k8s.local`)
#       services:
#         - name: jenkins
#           port: 8080
